fixes menu style on mobile

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -81,9 +81,7 @@
       padding: 5px 10px;
       background-color: #fff;
       color: #000;
-      &:hover {
-        box-shadow: none;
-      }
+      border: 0;
     }
   }
 
